Fixed tag cutoff in Safari

--- a/app/assets/stylesheets/view_stylesheets/notes.css.scss
+++ b/app/assets/stylesheets/view_stylesheets/notes.css.scss
@@ -944,9 +944,9 @@ textarea.comment-text, #newcomment, .comment .new-reply-panel .newreply {
           -moz-user-select: none;
 
           .tag-text {
-            line-height: 1.2;
+            line-height: 1.3;
             position: relative;
-            margin-top: -2px;
+            margin-top: -3px;
             margin-bottom: -2px;
             left: 6px;
             overflow: hidden;
